Add styling to footer

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -8,7 +8,7 @@
     padding-bottom: 20px;
     padding-left: 40px;
     padding-right: 40px;
-
+    margin-top: 20px;
 }
 
 .MainHeading {
@@ -32,6 +32,7 @@
     margin-left: 40px;
     width: 25%;
     align-items: center;
+    justify-content: center;
 }
 
 .RowSection {
