Added styling to Form, added working links to navbar button and social icons

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -49,7 +49,7 @@
 }
 
 .ItemLink:hover {
-    color: hsl(180, 66%, 49%);
+    color: #01bf71;
     text-decoration: none;
 }
 
@@ -79,7 +79,7 @@
 }
 
 .socialItemLink:hover {
-    color: hsl(180, 66%, 49%);
+    color: #01bf71;
     text-decoration: none;
 }
 
