--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Encode Sans Expanded','Montserrat', 'PT Sans Narrow', sans-serif;
+}
 
 body {
   margin-top: 80px;
@@ -37,13 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
+  width:40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
