--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -4,7 +4,8 @@
     justify-content: center;
     flex-direction: row;
     gap: 20%;
-    height: 40vh
+    height: 40vh;
+    margin: 150px 50px;
 }
 
 .about-title {
