--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -6,6 +6,7 @@
     width: 100%;
     gap: 10%;
     padding: 10px 0px;
+    margin: 50px 0px;
 }
 
 .carousel {
@@ -24,8 +25,7 @@
 
 .image-caption {
     max-width: 500px;
-    font-size: 40px;
-    font-weight: lighter;
+    font-size: 25px;
 }
 
 .carousel:hover .control-arrow {
