--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -13,7 +13,7 @@
 
 .MainHeading {
     color: black;
-    width:25%;
+    width: 50%;
     font-size: 32px;
 }
 
@@ -28,15 +28,14 @@
 .columns {
     display: flex;
     flex-direction: column;
-    text-align: left;
-    margin-left: 40px;
-    width: 25%;
-    align-items: center;
-    justify-content: center;
+    text-align: right;
+    width: 50%;
+    align-items: flex-end;
+    padding-right: 20px;
 }
 
 .RowSection {
-
+    justify-content: space-between;
     display: flex;
     flex-direction: row;
 }
@@ -63,7 +62,7 @@
 
 .socialColumns {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 30% 30% 30%;
     grid-gap: 8px;
     align-items: center;
     text-align: left;
