--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 20%;
-    height: 40vh;
-    margin: 150px 50px;
+    gap: 10%;
+    height: auto;
+    margin: 100px 50px;
 }
 
 .about-title {
@@ -20,4 +20,25 @@
 
 .about-description div {
     padding: 10px 0px;
+}
+
+@media screen and (max-width: 768px){
+
+    .about-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column-reverse;
+        gap: 20%;
+    }
+
+    .about-title {
+        font-size: 40px;
+        padding-bottom: 30px;
+    }
+
+    .about-description {
+        font-size: 18px;
+    }
+
 }
