--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -44,3 +44,12 @@
     color: #ffffff;
 }
 
+@media screen and (max-width: 768px){
+
+    .description {
+        width: 80%;
+        padding: 10px 35px;
+    }
+
+
+}
