--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -3,20 +3,24 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    gap: 10%;
+    /* width: 100%; */
+    /* gap: 10%; */
     padding: 10px 0px;
-    margin: 50px 0px;
+    margin: 50px 50px;
 }
 
 .carousel {
-    max-height: 60vh;
-    max-width: 20vw;
+    /* max-height: 100vh; */
+    /* max-width: 25vw; */
+    flex: 1 1 0;
+    justify-content: center;
 }
 
 .carousel-slider {
     margin: 0;
     padding: 0;
+    width: 40vw;
+    height: 100%;
 }
 
 .carousel .slide {
@@ -24,10 +28,39 @@
 }
 
 .image-caption {
-    max-width: 500px;
+    /* max-width: 500px; */
     font-size: 25px;
+    flex: 1 1 0;
+    padding: 0 30px;
+
 }
 
 .carousel:hover .control-arrow {
     background: rgba(0,0,0,0.2);
+}
+
+@media screen and (max-width: 960px){
+
+    .carousel-container {
+        gap: 50%;
+        margin: 60px 15px;
+        flex-direction:column;
+        justify-content: space-between;
+    }
+
+    .image-caption {
+        font-size: 12px;
+        padding: 0 15px;;
+        text-align: center;
+    }
+
+    .carousel-slider{  
+        width: 100%;
+    }
+
+    .carousel {
+        padding-bottom: 60px;
+    }
+
+
 }
