--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -4,16 +4,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px 0px;
+    padding: 100px 0px;
 }
 
 .form input {
-    max-width: 100%;
-    width: 50%;
+    max-width: 90%;
+    width: 80ch;
 }
 
 .contact-title {
     padding: 10px 0px;
+}
+
+.textField {
+    width: 50ch;
 }
 
 .submitBtn {
@@ -46,10 +50,14 @@
         justify-content: center;
         width: 100%;
         align-items: center;
-        padding: 0 40px;
+        padding: 85px 2px;
     }
 
     .textField {
-        width: 70%;
+        width: 80%;
+    }
+
+    .contact-title {
+        padding: 30px 50px;
     }
 }
