--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px 0px;
+    padding-bottom: 100px;
 }
 
 .form input {
