--- a/src/components/Team/style.css
+++ b/src/components/Team/style.css
@@ -25,5 +25,25 @@
 }
 
 .snackbar { 
-    max-width: 50% !important;
+    padding: 20px;
+    border-radius: 10px;
+    width: 35% !important;
+    background: #5524c9;
+    color: white;
+    font-weight: bold
+}
+
+.snackbar-content {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+.close-button-container {
+    display: flex;
+    align-items: flex-start;
+}
+
+.close-button {
+    padding-top: 0px !important;
 }
