--- a/src/components/Newsletter/style.css
+++ b/src/components/Newsletter/style.css
@@ -4,11 +4,12 @@
     justify-content: center;
     flex-direction: column;
     gap: 10%;
-    margin-top: 2.5%;
-    padding: 70px 0px;
     height: auto;
-    background: url("https://arexotics.com/wp-content/uploads/2019/10/header-background.jpg") no-repeat;
-    background-size: cover;
+    flex-basis: 50%;
+}
+
+.newsletter-container input {
+    background: white;
 }
 
 .newsletter-title {
@@ -17,16 +18,13 @@
 }
 
 @media screen and (max-width: 960px){
-
-
     .newsletter-title {
         font-size: 30px;
-        padding: 40px 50px;
+        padding: 15% 0px 5% 0px;
     }
 
     .newsletter-container {
-        padding: 200px 0px;
-    
+
     }
 
 
