--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -1,25 +1,26 @@
-.carousel-container {
+.root-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    /* width: 100%; */
-    /* gap: 10%; */
-    padding: 10px 0px;
-    margin: 50px 50px;
+    padding: 50px 50px;
+    width: 100%;
+    height: 100%;
 }
 
 .carousel {
-    /* max-height: 100vh; */
-    /* max-width: 25vw; */
-    flex: 1 1 0;
+    max-height: 80vh;
+    max-width: 20vw;
     justify-content: center;
+}
+
+.carousel-container {
+    width: 40%;
 }
 
 .carousel-slider {
     margin: 0;
     padding: 0;
-    width: 40vw;
     height: 100%;
 }
 
@@ -30,9 +31,8 @@
 .image-caption {
     /* max-width: 500px; */
     font-size: 25px;
-    flex: 1 1 0;
     padding: 0 30px;
-
+    width: 35%;
 }
 
 .carousel:hover .control-arrow {
@@ -41,17 +41,30 @@
 
 @media screen and (max-width: 960px){
 
-    .carousel-container {
+    .root-container {
         gap: 50%;
-        margin: 60px 15px;
         flex-direction:column;
         justify-content: space-between;
     }
 
+    .carousel-container {
+        width: 100%;
+    }
+
+    .carousel {
+        max-width: 100%;
+    }
+
     .image-caption {
-        font-size: 12px;
-        padding: 0 15px;;
+        padding: 0px;
+        font-size: 16px;
+        width: 100%;
         text-align: center;
+        height: 150px
+    }
+
+    .carousel .slide {
+        padding: 0px;
     }
 
     .carousel-slider{  
