--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 100px;
+    padding: 50px 0px;
 }
 
 .form input {
@@ -44,20 +44,18 @@
 }
 
 @media screen and (max-width: 768px){
+    .form {
+        padding: 5% 0px;
+    }
 
     .formContainer {
         display: flex;
         justify-content: center;
         width: 100%;
         align-items: center;
-        padding: 85px 2px;
     }
 
     .textField {
         width: 80%;
-    }
-
-    .contact-title {
-        padding: 30px 50px;
     }
 }
