--- a/src/components/Mission/style.css
+++ b/src/components/Mission/style.css
@@ -1,12 +1,18 @@
-.mission-container {
+.container {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    gap: 40%;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-direction: row;
     height: auto;
-    margin: 100px 50px;
-    padding-bottom: 90px;
+    padding: 50px 50px;
+}
+
+.mission-container {
+    flex-basis: 33%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mission-title {
@@ -66,6 +72,10 @@
 }
 
 @media screen and (max-width: 960px){
+    .container {
+        flex-direction: column;
+        padding: 5% 10%;
+    }
 
     .mission-container {
         display: flex;
@@ -73,12 +83,13 @@
         justify-content: center;
         flex-direction: column;
         gap: 20%;
+        width: 100%;
     }
 
     .mission-title {
         font-size: 25px;
         padding: 10px 0;
-        align-self: baseline;
+        align-self: center;
     }
 
     .mission-description {
@@ -88,7 +99,7 @@
     .identity-title {
         font-size: 25px;
         padding: 10px 0;
-        align-self: baseline;
+        align-self: center;
     }
 
     .identity-description {
@@ -98,11 +109,11 @@
     .value-title {
         font-size: 25px;
         padding: 10px 0;
-        align-self: baseline;
+        align-self: center;
     }
 
     .value-description {
         font-size: 18px;
-        align-self: baseline;
+        align-self: center;
     }
 }
