--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,11 +3,8 @@
     position:relative;
     bottom: 0;
     width: 100%;
-    padding-top: 50px;
     display: block;
-    padding-bottom: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 50px 40px 20px;
     margin-top: 20px;
 }
 
