--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -7,9 +7,12 @@
     padding: 50px 0px;
 }
 
+.formContainer {
+    width: 80%;
+}
+
 .form input {
-    max-width: 90%;
-    width: 80ch;
+    width: 80%;
 }
 
 .contact-title {
@@ -17,7 +20,7 @@
 }
 
 .textField {
-    width: 50ch;
+    width: 80%;
 }
 
 .submitBtn {
@@ -45,13 +48,13 @@
 
 @media screen and (max-width: 768px){
     .form {
-        padding: 5% 0px;
+        padding: 5% 15px;
     }
 
     .formContainer {
         display: flex;
         justify-content: center;
-        width: 100%;
+        width: 80%;
         align-items: center;
     }
 
