--- a/src/components/Newsletter/style.css
+++ b/src/components/Newsletter/style.css
@@ -15,6 +15,7 @@
 .newsletter-title {
     font-size: 30px;
     padding-bottom: 20px;
+    text-align: center;
 }
 
 @media screen and (max-width: 960px){
