--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Encode Sans Expanded','Montserrat', 'PT Sans Narrow', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
