--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -4,30 +4,37 @@
     align-items: center;
     justify-content: center;
     height: auto;
-    gap: 50px;
+    gap: 20px;
     text-align: center;
-    flex-basis: 60%;
+    flex-basis: 85%;
 }
 
 .jumbotron-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:center;
     align-items: center;
-    background: rgb(246, 246, 246);
-    padding: 70px 7.5%;
+    width: 100%;
+    height: 750px;
+    margin-top: -200px;
+    background: #000525;
+    padding: 70px 30px;
+    border-radius: 0px 0px 50px 50px;
 }
 
 .title {
     font-size: 50px;
     width:80%;
+    color: white;
 }
 
 .description {
-    font-size: 20px;
-    font-weight: 300;
-    padding: 10px 50px;
-    width: 80%;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    padding: 10px 1px;
+    width: 100%;
+    color: white;
 }
 
 .JumboBtn {
@@ -42,6 +49,8 @@
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     text-decoration: none;
+
+    
 
 }
 
