--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: auto;
+    margin-top: -100px;
     gap: 20px;
     text-align: center;
     flex-basis: 85%;
@@ -15,7 +16,7 @@
     justify-content:center;
     align-items: center;
     width: 100%;
-    height: 750px;
+    height: 850px;
     margin-top: -200px;
     background: #000525;
     padding: 70px 30px;
