--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,7 +1,7 @@
 .mobile-nav-container {
-    height: fit-content;
+    height: 100%;
     width: 100%;
-    background: white;
+    background: #000525;
     position: fixed;
     z-index: 1000;
 }
