--- a/src/components/Newsletter/style.css
+++ b/src/components/Newsletter/style.css
@@ -1,21 +1,36 @@
-.newsletter-container {
+.full-container {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.newsletter-container {
+    display: flex;
     flex-direction: column;
-    gap: 10%;
     height: auto;
     flex-basis: 50%;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 .newsletter-container input {
     background: white;
 }
 
+.subtitle-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 10px 10px;
+}
+
 .newsletter-title {
     font-size: 30px;
-    padding-bottom: 20px;
-    text-align: center;
+}
+.newsletter-detail {
+    font-size: 18px;
+    padding-bottom: 10px;
 }
 
 @media screen and (max-width: 960px){
