--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,27 +1,72 @@
 .about-container {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    /* align-items: center; */
+    /* justify-content: space-around; */
     flex-direction: row;
-    gap: 10%;
+    gap: 8%;
     height: auto;
-    padding: 100px 50px;
-    background: rgb(246, 246, 246);
+    padding: 100px 0px;
+    background: white;
+    margin-top: 50px;
+}
+
+.desc-container{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.about-quote {
+    background: #000525;
+    width: 45%;
+    padding: 80px 0;
+    border-radius: 50px;
+    margin-left: -50px;
+    padding-right: 50px;
+    padding-left: 110px;
+}
+
+.about-quote h2 {
+    color: white;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 40px;
+}
+
+.about-quote p {
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: right;
+    padding-top: 60px;
+    width: 100%;
+}
+
+.quote {
+    color: #13D84B;
+    width: 38px;
+    height: 32px;
 }
 
 .about-title {
-    font-size: 56px;
-    text-align: center;
+    font-size: 48px;
+    color: #000525;
+    text-align: left;
+    padding-bottom: 20px;
 }
 
 .about-description {
     font-size: 18px;
     font-weight: lighter;
     max-width: 600px;
+    padding-right: 60px;
 }
 
 .about-description div {
     padding: 10px 0px;
+    line-height: 28.13px;
 }
 
 @media screen and (max-width: 960px){
