--- a/src/components/OurTeam/style.css
+++ b/src/components/OurTeam/style.css
@@ -7,7 +7,8 @@
 
 .titleText {
     text-align: center;
-    font-size: 40px;
+    font-size: 48px;
+    padding-bottom: 50px;
 }
 
 .imgContainer {
