Responsive styling - mobile friendly ready

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -76,7 +76,8 @@
         align-items: center;
         justify-content: center;
         flex-direction: column-reverse;
-        padding: 5% 10%;
+        margin-top: 20px;
+        padding-top: 80px;
     }
 
     .about-title {
@@ -86,6 +87,22 @@
 
     .about-description {
         font-size: 18px;
+        padding: 5% 5%;
+    }
+
+    .about-quote {
+        width: 92%;
+        margin-left:0;
+        padding: 50px 40px;
+    }
+
+    .about-quote p {
+        padding-top: 30px;
+        font-size: 18px;
+    }
+
+    .about-quote h2 {
+        font-size: 24px;
     }
 
 }
