--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -65,21 +65,23 @@
     .jumbotron-container {
         flex-direction: column;
         padding: 5% 0px;
+        height: 600px;
+        margin-top: -100px;
     }
 
     .description {
         width: 90%;
         padding: 10px 35px;
-        font-size: 22px;
-    }
-
-    .title {
-        font-size: 42px;
-        width: 85%;
+        font-size: 18px;
+        margin-top: -40px;
     }
 
     .jumbotron {
         height: 95vh;
+    }
+
+    .jumbo-logo {
+        width: 75%;
     }
 
 
