--- a/src/components/Mission/style.css
+++ b/src/components/Mission/style.css
@@ -33,3 +33,20 @@
     line-height: 48px;
     padding: 16px 0;
 }
+
+@media screen and (max-width: 960px){
+
+    .list-container {
+        flex-wrap: wrap;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .listItem {
+        width: 100%;
+        font-size: 22px;
+        padding: 18px 0;
+        line-height: 25px;
+    }
+}
