--- a/src/components/OurTeam/style.css
+++ b/src/components/OurTeam/style.css
@@ -45,3 +45,11 @@
     padding-top: 14px;
 }
 
+@media screen and (max-width: 960px){
+    .member {
+        width: 45%;
+        padding: 0px;
+        height: 320px;
+        margin-bottom: 20px;
+    }
+}
