--- a/src/components/Preview/style.css
+++ b/src/components/Preview/style.css
@@ -70,39 +70,50 @@
 }
 
 
-
-/* .preview-title {
-    font-size: 56px;
-    text-align: center;
-}
-
-.preview-description {
-    font-size: 18px;
-    font-weight: lighter;
-    max-width: 600px;
-}
-
-.preview-description div {
-    padding: 10px 0px;
-}
-
 @media screen and (max-width: 960px){
 
-    .preview-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column-reverse;
-        padding: 5% 10%;
+    .image-container {
+        gap: 25px;
+        margin-top: -110px;
+        margin-bottom: 10px;
     }
 
-    .preview-title {
-        font-size: 40px;
-        padding-bottom: 5%;
+    .img1 {
+        height: 30%;
+        width: 30%;
     }
 
-    .preview-description {
-        font-size: 18px;
+    .img2 {
+        height: 35%;
+        width: 35%;
     }
 
-} */
+    .img3 {
+        height: 30%;
+        width: 30%;
+    }
+
+    .text-container {
+        gap: 60px;
+        padding-top: 90px;
+    }
+
+    .main-text {
+        width: 90%;
+        font-size: 50px;
+    }
+
+    .detail-container {
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
+    .detail h1 {
+        font-size: 50px;
+    }
+
+    .detail h2 {
+        font-size: 20px;
+    }
+
+}
