--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -83,6 +83,7 @@
     .about-title {
         font-size: 40px;
         padding-bottom: 5%;
+        text-align: center;
     }
 
     .about-description {
