--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -1,11 +1,11 @@
 .jumbotron {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: auto;
-    margin-top: -100px;
-    gap: 20px;
+    margin-top: 0px;
+    gap: 100px;
     text-align: center;
     flex-basis: 85%;
 }
@@ -16,11 +16,28 @@
     justify-content:center;
     align-items: center;
     width: 100%;
-    height: 750px;
+    height: auto;
     margin-top: -100px;
     background: #000525;
     padding: 70px 30px;
     border-radius: 0px 0px 50px 50px;
+    gap: 50;
+    padding-bottom: 0;
+}
+
+.leftColContainer {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    gap: 20;
+    margin-top: 80px;
+    align-items: left;
+}
+
+.rightColContainer{
+    width: 50%;
+    margin-top:-20px;
 }
 
 .title {
@@ -31,19 +48,39 @@
 
 .description {
     font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
+    text-align: left;
+    font-size: 60px;
+    line-height: 70px;
     padding: 10px 1px;
     padding-bottom: 30px;
     width: 100%;
     color: white;
+    height: 30%
+}
+
+.subtext {
+    height: 30%;
+    font-weight: 100;
+    font-size: 22px;
+    line-height: 35px;
+    color: white;
+    text-align: left;
+    padding: 10px 1px;
+    padding-bottom: 30px;
+    padding-right: 100px
+}
+.rightColContainer {
+    width: 314.67px;
+    height: 626px;
+    resize: both;
+    overflow: auto;
 }
 
 .button {
-    border-radius: 10px;
+    border-radius: 20px;
     background: #13D84B;
     white-space: nowrap;
-    padding: 12px 24px;
+    padding: 12px 12px;
     color: white;
     font-size: 16px;
     outline: none;
@@ -51,6 +88,9 @@
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     text-decoration: none;
+    margin: 10px 1px;
+    margin-bottom: 30px;
+    width: 50%
 }
 
 .button:hover {
@@ -62,22 +102,41 @@
 
 @media screen and (max-width: 960px){
     .jumbotron-container {
-        flex-direction: column;
-        padding: 5% 0px;
-        height: 600px;
-        margin-top: -100px;
-    }
-
-    .description {
-        width: 90%;
-        padding: 10px 35px;
-        font-size: 18px;
-        margin-top: -40px;
+        margin-top: 0px;
+        padding: 0px 10px;
     }
 
     .jumbotron {
-        height: 95vh;
+        flex-basis: 95%;
+        gap: 0px;
     }
+
+    .leftColContainer {
+        padding-right: 0;
+        width: 95%;
+        align-items: center;
+    }
+    .rightColContainer {
+        display: none;
+    }
+
+    .subtext {
+        padding-right: 5px;
+        font-size: 15px;
+        text-align: center;
+    }
+
+    .description {
+        font-size: 45px;
+        text-align: center;
+        line-height: 50px
+    }
+
+    .photo {
+        width:20%;
+        height:20%
+    }
+
 
     .jumbo-logo {
         width: 75%;
